--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.7.8",
     "next": "15.0.3",
+    "paper": "^0.12.18",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
