--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.14.1",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "paper": "^0.12.18",
