--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.14.1",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "paper": "^0.12.18",
