--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@motionone/utils": "^10.18.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/jquery": "^3.5.32",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.14.1",
     "gsap": "^3.12.5",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "paper": "^0.12.18",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-vertical-timeline-component": "^3.6.0",
+    "sass": "^1.83.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
