--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-app",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@motionone/utils": "^10.18.0",
     "axios": "^1.7.8",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.14.1",
+    "heroicons": "^2.2.0",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
